--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Security
+.env
+.env.local
+.env.development
+.env.production
+
+# Firebase
+.firebase
+.firebase/*
+!.firebase/hosting.cache
